[project]
name = "hello-streamlit-superapp"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Wilian", email = "wilianzilv@gmail.com" }
]
dependencies = [
    "streamlit>=1.28.1",
    "streamlit-superapp>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
